--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,13 @@ button.btnupdata {
   min-width: 19%;
   min-height: 30px;
 }
+@media (min-width: 650px) {
+  .app {
+    background-color: coral;
+    min-width: auto;
+   
+    margin: 100px auto;
+    border-radius: 8px;
+    padding: 15px;
+  }
+}
