--- a/src/index.css
+++ b/src/index.css
@@ -72,14 +72,15 @@ form input[type="submit"]:hover {
 }
 .row {
   display: flex;
-  gap: 15px;
+  flex-wrap: wrap;
+  gap: 10px;
   align-items: center;
   justify-content: space-between;
 }
 .row h3 {
   color: whitesmoke;
-  font-family: cursive;
-  font-weight: 100;
+  font-family: sans-serif;
+  font-weight: 600;
 }
 .click {
   min-width: 43%;
@@ -116,13 +117,19 @@ button.btnupdata {
   min-width: 19%;
   min-height: 30px;
 }
-@media (max-width: 650px) {
+@media (max-width: 696px) {
   .app {
-    background-color: coral;
-    min-width: auto;
-
-    margin: 100px auto;
-    border-radius: 8px;
-    padding: 15px;
+    max-width: 100%;
+  }
+}
+@media (max-width: 390px) {
+  .click {
+    min-width: 100%;
+    display: flex;
+    justify-content: end;
+    gap: 10px;
+  }
+  .row {
+    flex-direction: column;
   }
 }
